# openfinance-br-mcp

./: .env.example  .gitignore  CHANGELOG.md  CHANGELOG.pt-BR.md  CONTRIBUTING.md  CONTRIBUTING.pt-BR.md  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  README.pt-BR.md  RELEASING.md  SECURITY.md  SECURITY.pt-BR.md  SOURCES.md  SOURCES.pt-BR.md  VALIDATION.md  VALIDATION.pt-BR.md  commit.md  docker-compose.yml  pyproject.toml  server.json
.github/workflows/: ci.yml  release.yml
clients/: __init__.py
clients/accounts_v2_4_2/: __init__.py  client.py
clients/accounts_v2_4_2/models/: __init__.py  account_balances_data.py  account_balances_data_automatically_invested_amount.py  account_balances_data_available_amount.py  account_balances_data_blocked_amount.py  account_data.py  account_identification_data.py  account_overdraft_limits_data.py  account_overdraft_limits_data_overdraft_contracted_limit.py  account_overdraft_limits_data_overdraft_used_limit.py  account_overdraft_limits_data_unarranged_overdraft_amount.py  account_transactions_data.py  account_transactions_data_amount.py  enum_account_sub_type.py  enum_account_type.py  enum_completed_authorised_payment_indicator.py  enum_credit_debit_indicator.py  enum_partie_person_type.py  enum_transaction_types.py  links.py  links_account_id.py  meta.py  meta_only_request_date_time.py  response_account_balances.py  response_account_identification.py  response_account_list.py  response_account_overdraft_limits.py  response_account_transactions.py  response_error.py  response_error_errors_item.py  response_error_meta_single.py  response_error_meta_single_errors_item.py  transactions_links.py
clients/bank_fixed_incomes_v1_1_0/: __init__.py  client.py
clients/bank_fixed_incomes_v1_1_0/models/: __init__.py  bank_fixed_income_transactions_links.py  bank_fixed_incomes_meta.py  bank_fixed_incomes_product_movement.py  bank_fixed_incomes_product_movement_financial_transaction_tax.py  bank_fixed_incomes_product_movement_income_tax.py  bank_fixed_incomes_product_movement_transaction_gross_value.py  bank_fixed_incomes_product_movement_transaction_net_value.py  bank_fixed_incomes_product_movement_transaction_unit_price.py  bank_fixed_incomes_transactions_meta.py  enum_bank_fixed_income_indexer.py  enum_bank_fixed_income_movement_type.py  enum_bank_fixed_income_transaction_type.py  enum_calculation.py  enum_investment_type.py  enum_rate_periodicity.py  enum_rate_type.py  identify_product.py  identify_product_issue_unit_price.py  links.py  remuneration.py  response_bank_fixed_incomes_balances.py  response_bank_fixed_incomes_balances_data.py  response_bank_fixed_incomes_balances_data_blocked_balance.py  response_bank_fixed_incomes_balances_data_financial_transaction_tax.py  response_bank_fixed_incomes_balances_data_gross_amount.py  response_bank_fixed_incomes_balances_data_income_tax.py  response_bank_fixed_incomes_balances_data_net_amount.py  response_bank_fixed_incomes_balances_data_purchase_unit_price.py  response_bank_fixed_incomes_balances_data_updated_unit_price.py  response_bank_fixed_incomes_product_identification.py  response_bank_fixed_incomes_product_list.py  response_bank_fixed_incomes_product_list_data_item.py  response_bank_fixed_incomes_transactions.py  response_error_meta_single.py  response_error_meta_single_errors_item.py  (+1 more)
clients/consents_v3_3_1/: __init__.py  client.py
clients/credit_cards_v2_3_1/: __init__.py  client.py
clients/funds_v1_1_0/: __init__.py  client.py
clients/payments_v4_0_0/: __init__.py  client.py
clients/treasure_titles_v1_1_0/: __init__.py  client.py
clients/variable_incomes_v1_3_0/: __init__.py  client.py
docs/: diretorio-participantes-ispb-snapshot.txt
docs/en/: authorization.md
docs/pt/: authorization.md
examples/: claude_desktop_config.json
k8s/: config-and-secrets.yaml  deployment.yaml  ingress.yaml  service.yaml
src/openfinance_br_mcp/: __init__.py  config.py  context.py  exceptions.py  mcp_primitives.py  server.py
tests/: conftest.py
tests/integration/: test_http_transport_auth.py  test_tool_dispatch.py
tests/unit/: test_auth.py  test_authorization_session.py  test_bank_adapters.py  test_categorizer.py  test_config.py  test_consent.py  test_context.py  test_directory_client.py  test_id_token.py  test_idempotency_store.py  test_jwt_client_auth.py  test_logging_correlation.py  test_mcp_principal.py  test_mcp_token_verifier.py  test_mock_adapter.py  test_mtls_binding.py  test_par.py  test_payment_consent.py  test_payment_jws.py  test_redis_backend.py  test_release_metadata.py  test_server.py  test_store_protocol.py  test_token_exchange.py  test_tool_tracing.py  test_tools_accounts.py  test_tools_consent.py  test_tools_credit_cards.py  test_tools_errors.py  test_tools_investments.py  test_tools_payments.py  test_tools_pix.py  test_tracing.py  test_transactions.py
(+433 files in other folders)
